--- a/Week-1/Exercise1.2/src/index.html
+++ b/Week-1/Exercise1.2/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pesto Playlist</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet"
           href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
